# Nivlem-Avanzado

./: README.md
Bot/: CMakeLists.txt  bot  main.c  makefile
Bot/graphics/: paint.c  paint.h
Gallinas/: CMakeLists.txt  gallinas  main.c  makefile  untitled.html
Gallinas/aux/: calc.c  calc.h  list.c  list.h  tcp_connection.c  tcp_connection.h
Gallinas/graphics/: paint.c  paint.h
Gallinero/: CMakeLists.txt  README  gallinero  hosts.txt  input.txt  main.c  makefile
Gallinero/aux/: calc.c  calc.h  tcp_conection.c  tcp_conection.h
Nivlem/: CMakeLists.txt  main.c  makefile  nivlem
Nivlem/graphics/: paint.c  paint.h
